--- a/SQL/css/style.css
+++ b/SQL/css/style.css
@@ -57,11 +57,11 @@ padding:0px;
         height:50px;
     }
 .navbar-default .navbar-toggle {
-    border-color: #FFF;
+    border-color: red;
 }
 
     .navbar-default .navbar-toggle .icon-bar {
-        background-color: #FFF;
+        background-color: red;
     }
 
     .navbar-default .navbar-toggle:hover, .navbar-default .navbar-toggle:focus {
@@ -75,7 +75,7 @@ padding:0px;
 
     .navbar-default .navbar-nav > li > a:hover, 
     .navbar-default .navbar-nav > li > a:focus {
-        color: #B5D9F5;                                                  /* menu */
+        color: black;                                                  /* menu */
         text-decoration: none;
     }
 
@@ -98,7 +98,7 @@ padding:0px;
 .navbar-default .navbar-nav > .active > a,
 .navbar-default .navbar-nav > .active > a:hover,
 .navbar-default .navbar-nav > .active > a:focus {
-    color: #3786C4;                                                   /* menu */
+    color: black;                                                   /* menu */
     background-color: rgba(0, 0, 0, 0);
     border-radius: 4px;
     -webkit-border-radius: 4px;
