--- a/SQL/css/bootstrap.css
+++ b/SQL/css/bootstrap.css
@@ -1572,6 +1572,11 @@ pre code {
     width: 750px;
   }
 }
+@media (min-width: 500px) {
+  .container {
+    display: block;
+  }
+}
 @media (min-width: 992px) {
   .container {
     width: 970px;
