--- a/SQL/css/lea.css
+++ b/SQL/css/lea.css
@@ -28,3 +28,74 @@ ul.topnav li.right {float: right;}
   ul.topnav li.right, 
   ul.topnav li {float: none;}
 }
+
+ 
+/* mobile */
+
+.topnav {
+  overflow: hidden;
+  position: relative;
+  background-color: #333;  
+  z-index: 1;
+}
+
+.topnav #myLinks {
+  display: none;
+  z-index: 1;
+}
+
+.topnav a {
+  color: white;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+  display: block;
+}
+.topnav a.icon {
+  background: black;
+  display: block;
+  position: absolute;
+  right: 0;
+  top: 0;
+}
+
+.topnav a:hover {
+  background-color: #ddd;
+  color: black; 
+}
+
+.active {
+  background-color: #008080;
+  color: white;
+}
+
+@media only screen and (max-width: 480px) {
+  .desktop {
+    display: none;
+  }
+  .mobile-container {
+  display: block;
+  max-width: 480px;
+  margin: auto;
+  background-color: #008080; 
+  height: 30px;
+  color: white;
+  border-radius: 10px;
+} 
+}
+
+@media only screen and (min-width: 480px) {
+  .desktop {
+    display: block;
+  }
+  .mobile-container {
+  display: none;
+  max-width: 480px;
+  margin: auto;
+  background-color: #008080;
+  height: 30px;
+  color: white;
+  border-radius: 10px;
+} 
+}
+ 
